# gc_wvcp_cp

./: .gitignore  LICENSE  README.md  coucou.json  density_analysis.ipynb  instance_feasible.txt  instances_try_hard.txt  requirements.txt  setup.cfg  to_eval_cp  to_flat  to_solve
color_bounds/: CMakeLists.txt  color_bounds_original_graphs  color_bounds_reduced_wvcp  compute_color_bounds.py  test.py
color_bounds/HEAD/: head  results.txt
color_bounds/HEAD/src/: head.cpp  main.cpp
color_bounds/subgraphs_kcoloring_results_original_graphs/C2000.5.col/: C2000.5.col_w1  C2000.5.col_w10  C2000.5.col_w11  C2000.5.col_w12  C2000.5.col_w13  C2000.5.col_w14  C2000.5.col_w15  C2000.5.col_w16  C2000.5.col_w17  C2000.5.col_w18  C2000.5.col_w19  C2000.5.col_w2  C2000.5.col_w3  C2000.5.col_w4  C2000.5.col_w5  C2000.5.col_w6  C2000.5.col_w7  C2000.5.col_w8  C2000.5.col_w9
color_bounds/subgraphs_kcoloring_results_original_graphs/C2000.9.col/: C2000.9.col_w1  C2000.9.col_w10  C2000.9.col_w11  C2000.9.col_w12  C2000.9.col_w13  C2000.9.col_w14  C2000.9.col_w15  C2000.9.col_w16  C2000.9.col_w17  C2000.9.col_w18  C2000.9.col_w19  C2000.9.col_w2  C2000.9.col_w3  C2000.9.col_w4  C2000.9.col_w5  C2000.9.col_w6  C2000.9.col_w7  C2000.9.col_w8  C2000.9.col_w9
color_bounds/subgraphs_kcoloring_results_original_graphs/DSJC1000.1.col/: DSJC1000.1.col_w1  DSJC1000.1.col_w10  DSJC1000.1.col_w11  DSJC1000.1.col_w12  DSJC1000.1.col_w13  DSJC1000.1.col_w14  DSJC1000.1.col_w15  DSJC1000.1.col_w16  (+11 more)
color_bounds/tabucol/: Graph.cpp  Graph.hpp  Solution.cpp  Solution.hpp  main.cpp  utils.cpp  utils.hpp
(+2392 files in other folders)
